# trade_flow

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  Tiltfile  agent_example.py  build.py  env_example.py  main.py  pyproject.toml  requirements.txt  start.py  test_dockerfile.py
.docker/: docker-compose.yml  trade_flow.dockerfile
.github/workflows/: build_test.yml  ci_cd.yml  docker.yml
application/: README.md  TODOs.md  cli.py  logger.py  manager.py
application/analyzers/: analyzer.py  base.py
application/collectors/: __init__.py  base.py  binance_collector.py  metatrader_collector.py
application/config/: __init__.py  path.py  settings.py
application/database/: __init__.py  database.py  model_store.py  transactions.py
application/models/: __init__.py  app_model.py  config_model.py
application/notifications/: base.py  telegram_notifier.py
application/strategy/: alpha_strategy.py  base.py
application/utils/: __init__.py  binance.py  decimals.py  metatrader.py  utils.py
docs/: PRODUCT-REFERENCES.md  README.md  agents.md  architecture.md  cli.md  config_examples.md  docs.md  environments.md  feed.md  flow.md  folder_structure.md  getting_started.md  idea_clarity.md  install.md  interfaces.md  oms.md  repositories.md  repository.md  resources.md  scripts.md  venues.md
docs/components/: action_scheme.md  components.md  renderer.md  reward_scheme.md
docs/examples/: ledger_example.md  overview.md  renderers_and_plotly_chart.md  setup_environment_tutorial.md  train_and_evaluate_using_ray.md  use_stochastic_data.md
docs/tutorials/: ray.md
examples/: agent_example.py  create_environment_example.py  env_example.py  indicator_example.py  ledger_example.ipynb  nautilus gym_wrapper.ipynb  renderers_and_plotly_chart.ipynb  requirements.txt  sb3_agent_example.py  setup_environment_tutorial.ipynb  stochastic_data.ipynb  train_and_evaluate.ipynb  use_stochastic_data.ipynb
examples/data/: Coinbase_BTCUSD_1h.csv  Coinbase_BTCUSD_d.csv
examples/notebooks/: cartpole_example_rl.ipynb  example_rl.ipynb  ledger_example.ipynb  nautilus gym_wrapper.ipynb  renderers_and_plotly_chart.ipynb  setup_environment_tutorial.ipynb  train_and_evaluate.ipynb  use_stochastic_data.ipynb
examples/nt_example/: model.py  strategy.py  test_nt_ml.ipynb  utils.py
infrastructure/MetaTrader5/: Dockerfile  README.md  auto_login.py  mt5_example.py  mt5_test.ipynb  setup-wine-mt5.sh  setup-wine-python.sh
infrastructure/application/: README.md  components.json  generate_prj_view.py  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
infrastructure/k8s/: env.example.yaml  values.yaml
metatrader/: client.py  enums.py
metatrader/services/: __init__.py  account_service.py
metatrader/v0/: helpers.py  threaded_stream.py
nautilus_core/backtest/: build.rs  cbindgen_cython.toml
nautilus_core/common/: build.rs  cbindgen_cython.toml
nautilus_core/core/: build.rs
nautilus_core/model/: build.rs  cbindgen_cython.toml
notebooks/: README.md  mt5_test.ipynb
scripts/: depth_to_features.py  features.py  install-pygame.sh  labels.py  merge.py  predict.py  predict_rolling.py  setup-wine-python.sh  signals.py  train.py  train_signals.py
scripts/download/: binance.py  metatrader.py
templates/configs/: config-sample-v0.2.0.json  config-sample-v0.3.0.json  config-sample-v0.4.0.json  config-sample-v0.5.0.json  config-sample-v0.6.0.jsonc  config-sample-v0.7.dev.jsonc  example-config.jsonc
tests/: test_environment_manager_init.py  test_service_api.py
tests/tradeflow/: test_service_api.py
trade_flow/: __init__.py
trade_flow/adapters/: __init__.py  connect_with_terminal.py  metatrader5_sandbox.py  old_environment_manager.py
trade_flow/agents/: __init__.py  agent.py  base.py  dqn.py  elegantrl_models.py  sb3_agent.py  stablebaselines3_models.py
trade_flow/cli/: __init__.py  agents.py  environments.py  exchanges.py  generate.py  main.py  nodes.py  rpc.py  venues.py
trade_flow/common/: __init__.py  config.py  enums.py  gen_dockerfiles.py  types.py  utils.py
trade_flow/commons/: __init__.py  enviroment.py  logging.py  types.py  utils.py
trade_flow/core/: __init__.py  base.py  clock.py  component.py  context.py  data.py  data.pyx  flow.py  identifiers.py  node.py
trade_flow/daemon/: __init__.py  flow.py  flow_parser.py  server.py  task_manager.py
trade_flow/environments/: __init__.py  backtest.py  environment.py  environment_manager.py  forex_train.py  live.py  sandbox.py  train.py  utils.py  wrappers.py
trade_flow/execution/: __init__.py  simulated.py
trade_flow/feed/: __init__.py  base.py  feed.py  operators.py
trade_flow/flow/: __init__.py  data_manager.py  engine.py  environment_manager.py  exchange_manager.py  flow.py  flow_parser.py  kubernetes_backend.py  server.py  task_manager.py
trade_flow/indicators/: __init__.py  support_and_resistance.py
trade_flow/interfaces/: __init__.py  interface.py
trade_flow/model/: __init__.py  enums.py  venues.py
trade_flow/persistence/: config.py  flow.py  tradeplan.py
trade_flow/repositories/: __init__.py  models.py  repository.py  sqlite.py  store.py
trade_flow/stochastic/: __init__.py  brownian_motion.py  cox.py  fbm.py  gbm.py  helpers.py  heston.py  merton.py  ornstein_uhlenbeck.py  parameters.py  utils.py
trade_flow/store/: __init__.py  model.py  sqlite.py
trade_flow/utils/: __init__.py  helpers.py  nautilus_trader_helpers.py  utils.py
trade_flow/venues/: __init__.py  metatrader.py  venue.py  venue_manager.py
trade_flow_core/: Cargo.toml  README.md
trade_flow_core/daemon/: Cargo.toml
tradeflow/: cli.py  commands.py  tradeflow_channel_consumer.py
tradeflow/channels/: __init__.py  awesome_channel_test.py  tradeflow_channel.py
tradeflow/commons/: __init__.py  channels_name.py
tradeflow/evaluators/: __init__.py  generators.py  preprocess.py
tradeflow/flow/: engine.py  evaluator_type.py  objective_function.py
tradeflow/metatrader/: utils.py
tradeflow/services/: __init__.py  abstract_service.py  constants.py  enums.py  (+4 more)
(+599 files in other folders)
